--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -33,3 +33,19 @@
     flex-flow: column wrap;
     height: 250px;
 }
+
+.conteudoPrincipal-cursos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.conteudoPrincipal-cursos-link {
+    width: 23%;
+    margin-bottom: 1%;
+}
+.conteudoPrincipal-cursos-link:nth-child(4n) {
+    margin-right: 0;
+}
+.conteudoPrincipal-cursos-link:nth-child(4n+1) {
+    margin-left: 0;
+}
